--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "dependencies": {
     "casperjs": "^1.1.4",
     "express": "^4.16.2",
+    "free-google-image-search": "^1.0.0",
     "google-image-query": "^1.0.3",
     "jade": "^1.11.0",
+    "jsearch": "^1.0.0",
     "node-mac": "^0.1.8",
     "node-tesseract": "^0.2.7",
     "nodemon": "^1.12.1",
     "phantomjs": "^2.1.7",
     "request": "^2.83.0",
     "shell-escape": "^0.2.0",
+    "supervisor": "^0.12.0",
     "url": "^0.11.0",
     "util": "^0.10.3"
   },
